# gtk-c-layout

./: .gitignore  CMakeLists.txt  Readme.md
src/: CMakeLists.txt  main.c
